--- a/lang/en.json
+++ b/lang/en.json
@@ -154,5 +154,213 @@
   "copyright": "Copyright",
   "all_rights_reserved": "All rights reserved",
   "powered_by": "Powered by",
-  "tailoring_management_system": "Tailoring Management System"
+  "tailoring_management_system": "Tailoring Management System",
+  "customers": "Customers",
+  "orders": "Orders",
+  "invoices": "Invoices",
+  "measurements": "Measurements",
+  "cloth_types": "Cloth Types",
+  "expenses": "Expenses",
+  "reports": "Reports",
+  "contacts": "Contacts",
+  "subscriptions": "Subscriptions",
+  "quick_actions": "Quick Actions",
+  "alerts_reminders": "Alerts & Reminders",
+  "recent_orders": "Recent Orders",
+  "monthly_revenue": "Monthly Revenue",
+  "order_status": "Order Status",
+  "total_customers": "Total Customers",
+  "pending_revenue": "Pending Revenue",
+  "overdue_orders": "Overdue Orders",
+  "new_order": "New Order",
+  "add_customer": "Add Customer",
+  "create_invoice": "Create Invoice",
+  "record_expense": "Record Expense",
+  "view_all": "View All",
+  "customer": "Customer",
+  "amount": "Amount",
+  "due_date": "Due Date",
+  "need_attention": "Need attention",
+  "orders_due_today": "Orders due today",
+  "unpaid_invoices": "Unpaid invoices",
+  "all_caught_up": "All caught up! No urgent alerts.",
+  "no_orders_found": "No orders found",
+  "this_month": "this month",
+  "days_remaining": "days remaining",
+  "expires_today": "Expires today!",
+  "expired": "Expired",
+  "team_members": "Team Members",
+  "expiry_date": "Expiry Date",
+  "no_expiry": "No Expiry",
+  "current_plan": "Current Plan",
+  "upgrade_subscription": "Upgrade Subscription",
+  "demo_mode": "Demo Mode",
+  "payment_gateway_integration": "Payment Gateway Integration Required",
+  "proceed_to_payment": "Proceed to Payment (Demo)",
+  "most_popular": "Most Popular",
+  "current_plan_button": "Current Plan",
+  "trial_plan": "Trial Plan",
+  "upgrade_to": "Upgrade to",
+  "switch_to": "Switch to",
+  "detailed_plan_comparison": "Detailed Plan Comparison",
+  "feature": "Feature",
+  "free": "Free",
+  "basic": "Basic",
+  "premium": "Premium",
+  "enterprise": "Enterprise",
+  "price": "Price",
+  "monthly": "Monthly",
+  "annual": "Annual",
+  "per_month": "per month",
+  "per_year": "per year",
+  "unlimited": "Unlimited",
+  "email_support": "Email Support",
+  "priority_email_support": "Priority Email Support",
+  "priority_support_24_7": "24/7 Support",
+  "dedicated_manager": "Dedicated Manager",
+  "sms_notifications": "SMS Notifications",
+  "export_data": "Export Data",
+  "custom_integrations": "Custom Integrations",
+  "training_onboarding": "Training & Onboarding",
+  "sla_guarantee": "SLA Guarantee",
+  "data_migration_support": "Data Migration Support",
+  "white_label": "White-label",
+  "api_access": "API Access",
+  "custom_branding": "Custom Branding",
+  "multi_location_support": "Multi-location Support",
+  "advanced_analytics": "Advanced Analytics",
+  "phone_support": "24/7 Phone Support",
+  "contact_sales": "Contact Sales",
+  "get_started_free": "Get Started Free",
+  "choose_basic": "Choose Basic",
+  "choose_premium": "Choose Premium",
+  "choose_professional": "Choose Professional",
+  "starter": "Starter",
+  "professional": "Professional",
+  "perfect_for_small_shops": "Perfect for small tailoring shops",
+  "ideal_for_growing_businesses": "Ideal for growing businesses",
+  "for_large_tailoring_units": "For large tailoring units",
+  "basic_order_management": "Basic order management",
+  "simple_invoicing": "Simple invoicing",
+  "mobile_responsive": "Mobile responsive",
+  "advanced_order_tracking": "Advanced order tracking",
+  "professional_invoicing": "Professional invoicing",
+  "employee_management": "Employee management",
+  "analytics_reports": "Analytics & reports",
+  "priority_support": "Priority support",
+  "everything_in_professional": "Everything in Professional",
+  "advanced_analytics_insights": "Advanced analytics & insights",
+  "dedicated_account_manager": "Dedicated account manager",
+  "unlimited_users": "Unlimited users",
+  "custom_integrations_advanced": "Custom integrations",
+  "training_onboarding_advanced": "Training & onboarding",
+  "sla_guarantee_advanced": "SLA guarantee",
+  "data_migration_support_advanced": "Data migration support",
+  "priority_support_24_7_advanced": "Priority support (24/7)",
+  "up_to_customers": "Up to {count} customers",
+  "up_to_orders": "Up to {count} orders",
+  "basic_reporting": "Basic reporting",
+  "advanced_reporting": "Advanced reporting",
+  "advanced_reporting_analytics": "Advanced reporting & analytics",
+  "premium_analytics_insights": "Premium analytics & insights",
+  "user_account": "user account",
+  "up_to_users": "Up to {count} users",
+  "custom_cloth_types": "Custom cloth types",
+  "invoice_generation": "Invoice generation",
+  "measurement_management": "Measurement management",
+  "fabric_details": "Fabric details",
+  "quality_standards": "Quality standards",
+  "subscription_coupon_management": "Subscription & Coupon Management",
+  "customer_loyalty": "Customer loyalty",
+  "multi_language_support": "Multi-Language Support",
+  "diverse_customers": "Diverse customers",
+  "expand_reach": "Expand your reach",
+  "informative_dashboard_reports": "Informative Dashboard & Reports",
+  "comprehensive_reports": "Comprehensive reports",
+  "informed_decisions": "Informed decisions",
+  "save_time_reduce_manual_work": "Save Time & Reduce Manual Work",
+  "automate_repetitive_tasks": "Automate repetitive tasks",
+  "streamline_workflow": "Streamline your workflow",
+  "beautiful_garments": "Beautiful garments",
+  "improve_measurement_accuracy": "Improve Measurement Accuracy",
+  "digital_measurement_storage": "Digital measurement storage",
+  "precision_consistency": "Precision and consistency",
+  "track_orders_payments_effortlessly": "Track Orders & Payments Effortlessly",
+  "real_time_tracking": "Real-time tracking",
+  "always_informed": "Always informed",
+  "grow_business_digitally": "Grow Your Business Digitally",
+  "digital_tools": "Digital tools",
+  "grow_with_success": "Grow with your success",
+  "access_anywhere_anytime": "Access Anywhere, Anytime",
+  "cloud_based_platform": "Cloud-based platform",
+  "manage_from_anywhere": "Manage from anywhere in the world",
+  "secure_reliable_platform": "Secure & Reliable Platform",
+  "enterprise_grade_security": "Enterprise-grade security",
+  "uptime_guarantee": "99.9% uptime guarantee",
+  "register_business": "Register Your Business",
+  "create_account": "Create your account",
+  "business_profile": "Business profile",
+  "add_team": "Add Your Team",
+  "add_customers_employees": "Add customers, employees",
+  "configure_cloth_types": "Configure cloth types",
+  "manage_operations": "Manage Operations",
+  "handle_orders": "Handle orders",
+  "generate_invoices": "Generate invoices",
+  "track_payments": "Track payments",
+  "seamlessly": "Seamlessly",
+  "track_growth": "Track Growth",
+  "monitor_income": "Monitor income",
+  "business_growth": "Business growth",
+  "detailed_reports": "Detailed reports",
+  "see_it_in_action": "See It In Action",
+  "preview_screenshots": "Preview screenshots",
+  "key_features": "Key features",
+  "dashboard_overview": "Dashboard Overview",
+  "comprehensive_business_overview": "Comprehensive business overview",
+  "at_a_glance": "At a glance",
+  "order_management": "Order Management",
+  "track_manage_orders": "Track and manage all your orders",
+  "efficiently": "Efficiently",
+  "invoice_generation_preview": "Invoice Generation",
+  "professional_invoices": "Professional invoices",
+  "payment_tracking": "Payment tracking",
+  "what_customers_say": "What Our Customers Say",
+  "successful_tailoring_businesses": "Successful tailoring businesses",
+  "trust_platform": "Trust our platform",
+  "revolutionized_tailoring_business": "Revolutionized our tailoring business",
+  "managing_customers_orders": "Managing customers and orders",
+  "never_been_easier": "Never been easier",
+  "highly_recommended": "Highly recommended",
+  "measurement_management_fantastic": "Measurement management feature is fantastic",
+  "no_more_lost_measurements": "No more lost measurements",
+  "confused_orders": "Confused orders",
+  "accuracy_improved": "Accuracy has improved significantly",
+  "customer_support_excellent": "Customer support is excellent",
+  "platform_user_friendly": "Platform is very user-friendly",
+  "team_learned_one_day": "Team learned to use it in just one day",
+  "choose_your_plan": "Choose Your Plan",
+  "start_free_plan": "Start with our free plan",
+  "upgrade_business_grows": "Upgrade as your business grows",
+  "take_business_next_level": "Take Your Tailoring Business to the Next Level",
+  "thousands_successful_businesses": "Thousands of successful tailoring businesses",
+  "digitalized_operations": "Digitalized their operations",
+  "start_free_trial": "Start your free trial today",
+  "see_difference": "See the difference",
+  "register_business_cta": "Register Your Business",
+  "login_now": "Login Now",
+  "complete_tailoring_management": "Complete tailoring management system",
+  "modern_businesses": "Modern businesses",
+  "digitalize_workflow": "Digitalize your workflow",
+  "grow_business": "Grow your business",
+  "quick_links": "Quick Links",
+  "platform_links": "Platform",
+  "how_it_works": "How It Works",
+  "testimonials": "Testimonials",
+  "screenshots": "Screenshots",
+  "contact_info": "Contact Info",
+  "business_hours": "Business Hours",
+  "all_rights_reserved": "All rights reserved",
+  "privacy_policy": "Privacy Policy",
+  "terms_of_service": "Terms of Service",
+  "get_started": "Get Started"
 }
