--- a/lang/gu.json
+++ b/lang/gu.json
@@ -154,5 +154,213 @@
   "copyright": "કોપીરાઇટ",
   "all_rights_reserved": "બધા અધિકારો સુરક્ષિત",
   "powered_by": "દ્વારા સંચાલિત",
-  "tailoring_management_system": "દરજી સંચાલન સિસ્ટમ"
+  "tailoring_management_system": "દરજી સંચાલન સિસ્ટમ",
+  "customers": "ગ્રાહકો",
+  "orders": "ઓર્ડર",
+  "invoices": "ઇન્વૉઇસ",
+  "measurements": "માપ",
+  "cloth_types": "કપડાના પ્રકાર",
+  "expenses": "ખર્ચ",
+  "reports": "રિપોર્ટ",
+  "contacts": "સંપર્ક",
+  "subscriptions": "સબ્સ્ક્રિપ્શન",
+  "quick_actions": "ઝડપી ક્રિયાઓ",
+  "alerts_reminders": "અલર્ટ અને રિમાઇન્ડર",
+  "recent_orders": "તાજેતરના ઓર્ડર",
+  "monthly_revenue": "માસિક આવક",
+  "order_status": "ઓર્ડર સ્થિતિ",
+  "total_customers": "કુલ ગ્રાહકો",
+  "pending_revenue": "લંબાયેલી આવક",
+  "overdue_orders": "ઓવરડ્યુ ઓર્ડર",
+  "new_order": "નવો ઓર્ડર",
+  "add_customer": "ગ્રાહક ઉમેરો",
+  "create_invoice": "ઇન્વૉઇસ બનાવો",
+  "record_expense": "ખર્ચ રેકોર્ડ કરો",
+  "view_all": "બધું જુઓ",
+  "customer": "ગ્રાહક",
+  "amount": "રકમ",
+  "due_date": "નિયત તારીખ",
+  "need_attention": "ધ્યાનની જરૂર",
+  "orders_due_today": "આજના ઓર્ડર",
+  "unpaid_invoices": "અવબાકી ઇન્વૉઇસ",
+  "all_caught_up": "બધું ઠીક છે! કોઈ તાત્કાલિક અલર્ટ નથી.",
+  "no_orders_found": "કોઈ ઓર્ડર મળ્યો નથી",
+  "this_month": "આ મહિને",
+  "days_remaining": "દિવસ બાકી",
+  "expires_today": "આજે સમાપ્ત!",
+  "expired": "સમાપ્ત",
+  "team_members": "ટીમ સભ્યો",
+  "expiry_date": "સમાપ્તિ તારીખ",
+  "no_expiry": "કોઈ સમાપ્તિ નથી",
+  "current_plan": "વર્તમાન પ્લાન",
+  "upgrade_subscription": "સબ્સ્ક્રિપ્શન અપગ્રેડ કરો",
+  "demo_mode": "ડેમો મોડ",
+  "payment_gateway_integration": "પેમેન્ટ ગેટવે ઇન્ટિગ્રેશન જરૂરી",
+  "proceed_to_payment": "પેમેન્ટ માટે આગળ વધો (ડેમો)",
+  "most_popular": "સૌથી લોકપ્રિય",
+  "current_plan_button": "વર્તમાન પ્લાન",
+  "trial_plan": "ટ્રાયલ પ્લાન",
+  "upgrade_to": "અપગ્રેડ કરો",
+  "switch_to": "બદલો",
+  "detailed_plan_comparison": "વિગતવાર પ્લાન તુલના",
+  "feature": "સુવિધા",
+  "free": "મફત",
+  "basic": "બેઝિક",
+  "premium": "પ્રીમિયમ",
+  "enterprise": "એન્ટરપ્રાઇઝ",
+  "price": "કિંમત",
+  "monthly": "માસિક",
+  "annual": "વાર્ષિક",
+  "per_month": "પ્રતિ મહિનો",
+  "per_year": "પ્રતિ વર્ષ",
+  "unlimited": "અમર્યાદિત",
+  "email_support": "ઇમેઇલ સપોર્ટ",
+  "priority_email_support": "પ્રાથમિકતા ઇમેઇલ સપોર્ટ",
+  "priority_support_24_7": "24/7 સપોર્ટ",
+  "dedicated_manager": "સમર્પિત મેનેજર",
+  "sms_notifications": "એસએમએસ નોટિફિકેશન",
+  "export_data": "ડેટા નિકાસ",
+  "custom_integrations": "કસ્ટમ ઇન્ટિગ્રેશન",
+  "training_onboarding": "ટ્રેનિંગ અને ઓનબોર્ડિંગ",
+  "sla_guarantee": "એસએલએ ગેરંટી",
+  "data_migration_support": "ડેટા માઇગ્રેશન સપોર્ટ",
+  "white_label": "વ્હાઇટ-લેબલ",
+  "api_access": "એપીઆઇ એક્સેસ",
+  "custom_branding": "કસ્ટમ બ્રાન્ડિંગ",
+  "multi_location_support": "મલ્ટી-લોકેશન સપોર્ટ",
+  "advanced_analytics": "એડવાન્સ એનાલિટિક્સ",
+  "phone_support": "24/7 ફોન સપોર્ટ",
+  "contact_sales": "સેલ્સનો સંપર્ક કરો",
+  "get_started_free": "મફત શરૂ કરો",
+  "choose_basic": "બેઝિક પસંદ કરો",
+  "choose_premium": "પ્રીમિયમ પસંદ કરો",
+  "choose_professional": "પ્રોફેશનલ પસંદ કરો",
+  "starter": "સ્ટાર્ટર",
+  "professional": "પ્રોફેશનલ",
+  "perfect_for_small_shops": "નાની દરજી દુકાનો માટે આદર્શ",
+  "ideal_for_growing_businesses": "વધતા વ્યવસાયો માટે આદર્શ",
+  "for_large_tailoring_units": "મોટી દરજી યુનિટો માટે",
+  "basic_order_management": "બેઝિક ઓર્ડર મેનેજમેન્ટ",
+  "simple_invoicing": "સરળ ઇન્વૉઇસિંગ",
+  "mobile_responsive": "મોબાઇલ રેસ્પોન્સિવ",
+  "advanced_order_tracking": "એડવાન્સ ઓર્ડર ટ્રેકિંગ",
+  "professional_invoicing": "પ્રોફેશનલ ઇન્વૉઇસિંગ",
+  "employee_management": "કર્મચારી મેનેજમેન્ટ",
+  "analytics_reports": "એનાલિટિક્સ અને રિપોર્ટ",
+  "priority_support": "પ્રાથમિકતા સપોર્ટ",
+  "everything_in_professional": "પ્રોફેશનલમાં બધું",
+  "advanced_analytics_insights": "એડવાન્સ એનાલિટિક્સ અને ઇન્સાઇટ",
+  "dedicated_account_manager": "સમર્પિત એકાઉન્ટ મેનેજર",
+  "unlimited_users": "અમર્યાદિત વપરાશકર્તાઓ",
+  "custom_integrations_advanced": "કસ્ટમ ઇન્ટિગ્રેશન",
+  "training_onboarding_advanced": "ટ્રેનિંગ અને ઓનબોર્ડિંગ",
+  "sla_guarantee_advanced": "એસએલએ ગેરંટી",
+  "data_migration_support_advanced": "ડેટા માઇગ્રેશન સપોર્ટ",
+  "priority_support_24_7_advanced": "પ્રાથમિકતા સપોર્ટ (24/7)",
+  "up_to_customers": "{count} ગ્રાહકો સુધી",
+  "up_to_orders": "{count} ઓર્ડર સુધી",
+  "basic_reporting": "બેઝિક રિપોર્ટિંગ",
+  "advanced_reporting": "એડવાન્સ રિપોર્ટિંગ",
+  "advanced_reporting_analytics": "એડવાન્સ રિપોર્ટિંગ અને એનાલિટિક્સ",
+  "premium_analytics_insights": "પ્રીમિયમ એનાલિટિક્સ અને ઇન્સાઇટ",
+  "user_account": "વપરાશકર્તા એકાઉન્ટ",
+  "up_to_users": "{count} વપરાશકર્તાઓ સુધી",
+  "custom_cloth_types": "કસ્ટમ કપડાના પ્રકાર",
+  "invoice_generation": "ઇન્વૉઇસ જનરેશન",
+  "measurement_management": "માપ મેનેજમેન્ટ",
+  "fabric_details": "ફેબ્રિક વિગતો",
+  "quality_standards": "ગુણવત્તા માનકો",
+  "subscription_coupon_management": "સબ્સ્ક્રિપ્શન અને કૂપન મેનેજમેન્ટ",
+  "customer_loyalty": "ગ્રાહક વફાદારી",
+  "multi_language_support": "મલ્ટી-લેંગ્વેજ સપોર્ટ",
+  "diverse_customers": "વિવિધ ગ્રાહકો",
+  "expand_reach": "તમારી પહોંચ વિસ્તૃત કરો",
+  "informative_dashboard_reports": "માહિતીપ્રદ ડેશબોર્ડ અને રિપોર્ટ",
+  "comprehensive_reports": "વ્યાપક રિપોર્ટ",
+  "informed_decisions": "માહિતીપૂર્ણ નિર્ણયો",
+  "save_time_reduce_manual_work": "સમય બચાવો અને મેન્યુઅલ કામ ઘટાડો",
+  "automate_repetitive_tasks": "પુનરાવર્તિત કાર્યોને ઓટોમેટ કરો",
+  "streamline_workflow": "તમારા વર્કફ્લોને સ્ટ્રીમલાઇન કરો",
+  "beautiful_garments": "સુંદર કપડાં",
+  "improve_measurement_accuracy": "માપની ચોકસાઈ સુધારો",
+  "digital_measurement_storage": "ડિજિટલ માપ સ્ટોરેજ",
+  "precision_consistency": "ચોકસાઈ અને સુસંગતતા",
+  "track_orders_payments_effortlessly": "ઓર્ડર અને પેમેન્ટને સરળતાથી ટ્રેક કરો",
+  "real_time_tracking": "રીઅલ-ટાઇમ ટ્રેકિંગ",
+  "always_informed": "હંમેશા માહિતીપૂર્ણ",
+  "grow_business_digitally": "તમારા વ્યવસાયને ડિજિટલ રીતે વધારો",
+  "digital_tools": "ડિજિટલ સાધનો",
+  "grow_with_success": "તમારી સફળતા સાથે વધો",
+  "access_anywhere_anytime": "કોઈપણ સ્થાને, કોઈપણ સમયે એક્સેસ કરો",
+  "cloud_based_platform": "ક્લાઉડ-આધારિત પ્લેટફોર્મ",
+  "manage_from_anywhere": "વિશ્વમાં કોઈપણ સ્થાનેથી મેનેજ કરો",
+  "secure_reliable_platform": "સુરક્ષિત અને વિશ્વસનીય પ્લેટફોર્મ",
+  "enterprise_grade_security": "એન્ટરપ્રાઇઝ-ગ્રેડ સુરક્ષા",
+  "uptime_guarantee": "99.9% અપટાઇમ ગેરંટી",
+  "register_business": "તમારો વ્યવસાય નોંધાવો",
+  "create_account": "તમારું એકાઉન્ટ બનાવો",
+  "business_profile": "વ્યવસાય પ્રોફાઇલ",
+  "add_team": "તમારી ટીમ ઉમેરો",
+  "add_customers_employees": "ગ્રાહકો, કર્મચારીઓ ઉમેરો",
+  "configure_cloth_types": "કપડાના પ્રકાર કન્ફિગર કરો",
+  "manage_operations": "ઓપરેશન મેનેજ કરો",
+  "handle_orders": "ઓર્ડર હેન્ડલ કરો",
+  "generate_invoices": "ઇન્વૉઇસ જનરેટ કરો",
+  "track_payments": "પેમેન્ટ ટ્રેક કરો",
+  "seamlessly": "નિર્વિઘ્ન રીતે",
+  "track_growth": "વૃદ્ધિ ટ્રેક કરો",
+  "monitor_income": "આવકની મોનિટરિંગ કરો",
+  "business_growth": "વ્યવસાય વૃદ્ધિ",
+  "detailed_reports": "વિગતવાર રિપોર્ટ",
+  "see_it_in_action": "તેને કાર્યમાં જુઓ",
+  "preview_screenshots": "પૂર્વાવલોકન સ્ક્રીનશોટ",
+  "key_features": "મુખ્ય સુવિધાઓ",
+  "dashboard_overview": "ડેશબોર્ડ અવલોકન",
+  "comprehensive_business_overview": "વ્યાપક વ્યવસાય અવલોકન",
+  "at_a_glance": "એક નજરમાં",
+  "order_management": "ઓર્ડર મેનેજમેન્ટ",
+  "track_manage_orders": "બધા ઓર્ડરને ટ્રેક અને મેનેજ કરો",
+  "efficiently": "કાર્યક્ષમ રીતે",
+  "invoice_generation_preview": "ઇન્વૉઇસ જનરેશન",
+  "professional_invoices": "પ્રોફેશનલ ઇન્વૉઇસ",
+  "payment_tracking": "પેમેન્ટ ટ્રેકિંગ",
+  "what_customers_say": "અમારા ગ્રાહકો શું કહે છે",
+  "successful_tailoring_businesses": "સફળ દરજી વ્યવસાયો",
+  "trust_platform": "અમારા પ્લેટફોર્મ પર વિશ્વાસ કરો",
+  "revolutionized_tailoring_business": "અમારા દરજી વ્યવસાયમાં ક્રાંતિ લાવી",
+  "managing_customers_orders": "ગ્રાહકો અને ઓર્ડરનું મેનેજમેન્ટ",
+  "never_been_easier": "ક્યારેય આટલું સરળ નહોતું",
+  "highly_recommended": "ખૂબ ભલામણ કરેલ",
+  "measurement_management_fantastic": "માપ મેનેજમેન્ટ સુવિધા ફેન્ટેસ્ટિક છે",
+  "no_more_lost_measurements": "હવે ખોવાયેલા માપ નહીં",
+  "confused_orders": "ગૂંચવાયેલા ઓર્ડર",
+  "accuracy_improved": "ચોકસાઈમાં નોંધપાત્ર સુધારો",
+  "customer_support_excellent": "ગ્રાહક સપોર્ટ ઉત્કૃષ્ટ છે",
+  "platform_user_friendly": "પ્લેટફોર્મ ખૂબ જ વપરાશકર્તા-મિત્ર છે",
+  "team_learned_one_day": "ટીમે તેને માત્ર એક દિવસમાં શીખી લીધું",
+  "choose_your_plan": "તમારો પ્લાન પસંદ કરો",
+  "start_free_plan": "અમારા મફત પ્લાનથી શરૂ કરો",
+  "upgrade_business_grows": "તમારો વ્યવસાય વધે તેમ અપગ્રેડ કરો",
+  "take_business_next_level": "તમારા દરજી વ્યવસાયને આગલા સ્તરે લઈ જાઓ",
+  "thousands_successful_businesses": "હજારો સફળ દરજી વ્યવસાયો",
+  "digitalized_operations": "તેમની ઓપરેશનને ડિજિટલ બનાવ્યા",
+  "start_free_trial": "આજે જ તમારું મફત ટ્રાયલ શરૂ કરો",
+  "see_difference": "ફેર જુઓ",
+  "register_business_cta": "તમારો વ્યવસાય નોંધાવો",
+  "login_now": "હમણાં લોગિન કરો",
+  "complete_tailoring_management": "સંપૂર્ણ દરજી મેનેજમેન્ટ સિસ્ટમ",
+  "modern_businesses": "આધુનિક વ્યવસાયો",
+  "digitalize_workflow": "તમારા વર્કફ્લોને ડિજિટલ બનાવો",
+  "grow_business": "તમારા વ્યવસાયને વધારો",
+  "quick_links": "ઝડપી લિંક",
+  "platform_links": "પ્લેટફોર્મ",
+  "how_it_works": "તે કેવી રીતે કામ કરે છે",
+  "testimonials": "સાક્ષ્ય",
+  "screenshots": "સ્ક્રીનશોટ",
+  "contact_info": "સંપર્ક માહિતી",
+  "business_hours": "વ્યવસાય કલાકો",
+  "all_rights_reserved": "બધા અધિકારો સુરક્ષિત",
+  "privacy_policy": "ગોપનીયતા નીતિ",
+  "terms_of_service": "સેવાની શરતો",
+  "get_started": "શરૂ કરો"
 }
