--- a/lang/hi.json
+++ b/lang/hi.json
@@ -154,5 +154,213 @@
   "copyright": "कॉपीराइट",
   "all_rights_reserved": "सभी अधिकार सुरक्षित",
   "powered_by": "द्वारा संचालित",
-  "tailoring_management_system": "दर्जी प्रबंधन प्रणाली"
+  "tailoring_management_system": "दर्जी प्रबंधन प्रणाली",
+  "customers": "ग्राहक",
+  "orders": "आदेश",
+  "invoices": "चालान",
+  "measurements": "माप",
+  "cloth_types": "कपड़े के प्रकार",
+  "expenses": "खर्च",
+  "reports": "रिपोर्ट",
+  "contacts": "संपर्क",
+  "subscriptions": "सब्सक्रिप्शन",
+  "quick_actions": "त्वरित कार्य",
+  "alerts_reminders": "अलर्ट और अनुस्मारक",
+  "recent_orders": "हाल के आदेश",
+  "monthly_revenue": "मासिक राजस्व",
+  "order_status": "आदेश स्थिति",
+  "total_customers": "कुल ग्राहक",
+  "pending_revenue": "लंबित राजस्व",
+  "overdue_orders": "अतिदेय आदेश",
+  "new_order": "नया आदेश",
+  "add_customer": "ग्राहक जोड़ें",
+  "create_invoice": "चालान बनाएं",
+  "record_expense": "खर्च दर्ज करें",
+  "view_all": "सभी देखें",
+  "customer": "ग्राहक",
+  "amount": "राशि",
+  "due_date": "नियत तारीख",
+  "need_attention": "ध्यान की आवश्यकता",
+  "orders_due_today": "आज के आदेश",
+  "unpaid_invoices": "अवैतनिक चालान",
+  "all_caught_up": "सब कुछ ठीक है! कोई तत्काल अलर्ट नहीं।",
+  "no_orders_found": "कोई आदेश नहीं मिला",
+  "this_month": "इस महीने",
+  "days_remaining": "दिन शेष",
+  "expires_today": "आज समाप्त!",
+  "expired": "समाप्त",
+  "team_members": "टीम सदस्य",
+  "expiry_date": "समाप्ति तिथि",
+  "no_expiry": "कोई समाप्ति नहीं",
+  "current_plan": "वर्तमान योजना",
+  "upgrade_subscription": "सब्सक्रिप्शन अपग्रेड करें",
+  "demo_mode": "डेमो मोड",
+  "payment_gateway_integration": "पेमेंट गेटवे इंटीग्रेशन आवश्यक",
+  "proceed_to_payment": "पेमेंट के लिए आगे बढ़ें (डेमो)",
+  "most_popular": "सबसे लोकप्रिय",
+  "current_plan_button": "वर्तमान योजना",
+  "trial_plan": "ट्रायल योजना",
+  "upgrade_to": "अपग्रेड करें",
+  "switch_to": "बदलें",
+  "detailed_plan_comparison": "विस्तृत योजना तुलना",
+  "feature": "सुविधा",
+  "free": "मुफ्त",
+  "basic": "बेसिक",
+  "premium": "प्रीमियम",
+  "enterprise": "एंटरप्राइज",
+  "price": "मूल्य",
+  "monthly": "मासिक",
+  "annual": "वार्षिक",
+  "per_month": "प्रति माह",
+  "per_year": "प्रति वर्ष",
+  "unlimited": "असीमित",
+  "email_support": "ईमेल सहायता",
+  "priority_email_support": "प्राथमिकता ईमेल सहायता",
+  "priority_support_24_7": "24/7 सहायता",
+  "dedicated_manager": "समर्पित प्रबंधक",
+  "sms_notifications": "एसएमएस सूचनाएं",
+  "export_data": "डेटा निर्यात",
+  "custom_integrations": "कस्टम इंटीग्रेशन",
+  "training_onboarding": "प्रशिक्षण और ऑनबोर्डिंग",
+  "sla_guarantee": "एसएलए गारंटी",
+  "data_migration_support": "डेटा माइग्रेशन सहायता",
+  "white_label": "व्हाइट-लेबल",
+  "api_access": "एपीआई एक्सेस",
+  "custom_branding": "कस्टम ब्रांडिंग",
+  "multi_location_support": "मल्टी-लोकेशन सहायता",
+  "advanced_analytics": "उन्नत एनालिटिक्स",
+  "phone_support": "24/7 फोन सहायता",
+  "contact_sales": "सेल्स से संपर्क करें",
+  "get_started_free": "मुफ्त शुरू करें",
+  "choose_basic": "बेसिक चुनें",
+  "choose_premium": "प्रीमियम चुनें",
+  "choose_professional": "प्रोफेशनल चुनें",
+  "starter": "स्टार्टर",
+  "professional": "प्रोफेशनल",
+  "perfect_for_small_shops": "छोटी दर्जी दुकानों के लिए आदर्श",
+  "ideal_for_growing_businesses": "बढ़ते व्यवसायों के लिए आदर्श",
+  "for_large_tailoring_units": "बड़ी दर्जी इकाइयों के लिए",
+  "basic_order_management": "बेसिक आदेश प्रबंधन",
+  "simple_invoicing": "सरल चालान",
+  "mobile_responsive": "मोबाइल रेस्पॉन्सिव",
+  "advanced_order_tracking": "उन्नत आदेश ट्रैकिंग",
+  "professional_invoicing": "पेशेवर चालान",
+  "employee_management": "कर्मचारी प्रबंधन",
+  "analytics_reports": "एनालिटिक्स और रिपोर्ट",
+  "priority_support": "प्राथमिकता सहायता",
+  "everything_in_professional": "प्रोफेशनल में सब कुछ",
+  "advanced_analytics_insights": "उन्नत एनालिटिक्स और अंतर्दृष्टि",
+  "dedicated_account_manager": "समर्पित खाता प्रबंधक",
+  "unlimited_users": "असीमित उपयोगकर्ता",
+  "custom_integrations_advanced": "कस्टम इंटीग्रेशन",
+  "training_onboarding_advanced": "प्रशिक्षण और ऑनबोर्डिंग",
+  "sla_guarantee_advanced": "एसएलए गारंटी",
+  "data_migration_support_advanced": "डेटा माइग्रेशन सहायता",
+  "priority_support_24_7_advanced": "प्राथमिकता सहायता (24/7)",
+  "up_to_customers": "{count} ग्राहकों तक",
+  "up_to_orders": "{count} आदेशों तक",
+  "basic_reporting": "बेसिक रिपोर्टिंग",
+  "advanced_reporting": "उन्नत रिपोर्टिंग",
+  "advanced_reporting_analytics": "उन्नत रिपोर्टिंग और एनालिटिक्स",
+  "premium_analytics_insights": "प्रीमियम एनालिटिक्स और अंतर्दृष्टि",
+  "user_account": "उपयोगकर्ता खाता",
+  "up_to_users": "{count} उपयोगकर्ताओं तक",
+  "custom_cloth_types": "कस्टम कपड़े के प्रकार",
+  "invoice_generation": "चालान जेनरेशन",
+  "measurement_management": "माप प्रबंधन",
+  "fabric_details": "फैब्रिक विवरण",
+  "quality_standards": "गुणवत्ता मानक",
+  "subscription_coupon_management": "सब्सक्रिप्शन और कूपन प्रबंधन",
+  "customer_loyalty": "ग्राहक वफादारी",
+  "multi_language_support": "मल्टी-लैंग्वेज सहायता",
+  "diverse_customers": "विविध ग्राहक",
+  "expand_reach": "अपनी पहुंच बढ़ाएं",
+  "informative_dashboard_reports": "सूचनात्मक डैशबोर्ड और रिपोर्ट",
+  "comprehensive_reports": "व्यापक रिपोर्ट",
+  "informed_decisions": "सूचित निर्णय",
+  "save_time_reduce_manual_work": "समय बचाएं और मैनुअल काम कम करें",
+  "automate_repetitive_tasks": "दोहराए जाने वाले कार्यों को स्वचालित करें",
+  "streamline_workflow": "अपने वर्कफ्लो को सुव्यवस्थित करें",
+  "beautiful_garments": "सुंदर कपड़े",
+  "improve_measurement_accuracy": "माप सटीकता में सुधार",
+  "digital_measurement_storage": "डिजिटल माप भंडारण",
+  "precision_consistency": "सटीकता और निरंतरता",
+  "track_orders_payments_effortlessly": "आदेश और भुगतान को आसानी से ट्रैक करें",
+  "real_time_tracking": "रियल-टाइम ट्रैकिंग",
+  "always_informed": "हमेशा सूचित",
+  "grow_business_digitally": "अपने व्यवसाय को डिजिटल रूप से बढ़ाएं",
+  "digital_tools": "डिजिटल उपकरण",
+  "grow_with_success": "अपनी सफलता के साथ बढ़ें",
+  "access_anywhere_anytime": "कहीं भी, कभी भी एक्सेस करें",
+  "cloud_based_platform": "क्लाउड-आधारित प्लेटफॉर्म",
+  "manage_from_anywhere": "दुनिया में कहीं से भी प्रबंधन करें",
+  "secure_reliable_platform": "सुरक्षित और विश्वसनीय प्लेटफॉर्म",
+  "enterprise_grade_security": "एंटरप्राइज-ग्रेड सुरक्षा",
+  "uptime_guarantee": "99.9% अपटाइम गारंटी",
+  "register_business": "अपना व्यवसाय पंजीकृत करें",
+  "create_account": "अपना खाता बनाएं",
+  "business_profile": "व्यवसाय प्रोफ़ाइल",
+  "add_team": "अपनी टीम जोड़ें",
+  "add_customers_employees": "ग्राहक, कर्मचारी जोड़ें",
+  "configure_cloth_types": "कपड़े के प्रकार कॉन्फ़िगर करें",
+  "manage_operations": "संचालन प्रबंधन",
+  "handle_orders": "आदेश संभालें",
+  "generate_invoices": "चालान जेनरेट करें",
+  "track_payments": "भुगतान ट्रैक करें",
+  "seamlessly": "निर्बाध रूप से",
+  "track_growth": "वृद्धि ट्रैक करें",
+  "monitor_income": "आय की निगरानी करें",
+  "business_growth": "व्यवसाय वृद्धि",
+  "detailed_reports": "विस्तृत रिपोर्ट",
+  "see_it_in_action": "इसे कार्य में देखें",
+  "preview_screenshots": "पूर्वावलोकन स्क्रीनशॉट",
+  "key_features": "मुख्य सुविधाएं",
+  "dashboard_overview": "डैशबोर्ड अवलोकन",
+  "comprehensive_business_overview": "व्यापक व्यवसाय अवलोकन",
+  "at_a_glance": "एक नज़र में",
+  "order_management": "आदेश प्रबंधन",
+  "track_manage_orders": "सभी आदेशों को ट्रैक और प्रबंधित करें",
+  "efficiently": "कुशलतापूर्वक",
+  "invoice_generation_preview": "चालान जेनरेशन",
+  "professional_invoices": "पेशेवर चालान",
+  "payment_tracking": "भुगतान ट्रैकिंग",
+  "what_customers_say": "हमारे ग्राहक क्या कहते हैं",
+  "successful_tailoring_businesses": "सफल दर्जी व्यवसाय",
+  "trust_platform": "हमारे प्लेटफॉर्म पर भरोसा करें",
+  "revolutionized_tailoring_business": "हमारे दर्जी व्यवसाय में क्रांति लाई",
+  "managing_customers_orders": "ग्राहकों और आदेशों का प्रबंधन",
+  "never_been_easier": "कभी इतना आसान नहीं था",
+  "highly_recommended": "अत्यधिक अनुशंसित",
+  "measurement_management_fantastic": "माप प्रबंधन सुविधा शानदार है",
+  "no_more_lost_measurements": "अब खोए हुए माप नहीं",
+  "confused_orders": "भ्रमित आदेश",
+  "accuracy_improved": "सटीकता में काफी सुधार हुआ",
+  "customer_support_excellent": "ग्राहक सहायता उत्कृष्ट है",
+  "platform_user_friendly": "प्लेटफॉर्म बहुत उपयोगकर्ता-मित्र है",
+  "team_learned_one_day": "टीम ने इसे सिर्फ एक दिन में सीख लिया",
+  "choose_your_plan": "अपनी योजना चुनें",
+  "start_free_plan": "हमारी मुफ्त योजना से शुरू करें",
+  "upgrade_business_grows": "जैसे-जैसे आपका व्यवसाय बढ़े, अपग्रेड करें",
+  "take_business_next_level": "अपने दर्जी व्यवसाय को अगले स्तर पर ले जाएं",
+  "thousands_successful_businesses": "हजारों सफल दर्जी व्यवसाय",
+  "digitalized_operations": "अपने संचालन को डिजिटल बनाया",
+  "start_free_trial": "आज ही अपना मुफ्त ट्रायल शुरू करें",
+  "see_difference": "अंतर देखें",
+  "register_business_cta": "अपना व्यवसाय पंजीकृत करें",
+  "login_now": "अभी लॉगिन करें",
+  "complete_tailoring_management": "पूर्ण दर्जी प्रबंधन प्रणाली",
+  "modern_businesses": "आधुनिक व्यवसाय",
+  "digitalize_workflow": "अपने वर्कफ्लो को डिजिटल बनाएं",
+  "grow_business": "अपने व्यवसाय को बढ़ाएं",
+  "quick_links": "त्वरित लिंक",
+  "platform_links": "प्लेटफॉर्म",
+  "how_it_works": "यह कैसे काम करता है",
+  "testimonials": "गवाही",
+  "screenshots": "स्क्रीनशॉट",
+  "contact_info": "संपर्क जानकारी",
+  "business_hours": "व्यवसाय घंटे",
+  "all_rights_reserved": "सभी अधिकार सुरक्षित",
+  "privacy_policy": "गोपनीयता नीति",
+  "terms_of_service": "सेवा की शर्तें",
+  "get_started": "शुरू करें"
 }
